- Converted from JUNIT4 to JUNIT5. - Converted from JUNIT Assertions to AssertForJ library. - replaced utf-8 strings with StandardCharsets.UTF_8 constant.